app_descriptors/deployments/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uc3-applications
  labels:
    name: uc3-applications
    app: uc3
