app_descriptors/deployments/deployment-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucm-processor-deployment
  namespace: uc3-applications
  labels:
    app: ucm-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ucm-processor
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
      labels:
        app: ucm-processor
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      serviceAccountName: starlight-sa
      volumes:
      - name: ucm-pv-storage
        persistentVolumeClaim:
          claimName: ucm-pv-claim
      containers:
      - image: quay.io/bcapper30/starlight
        name: starlight
        workingDir: /docker/starlight/STARLIGHTv04
        command: ["./bash_script2.sh"]
        volumeMounts:
        - mountPath: /processing_data/
          name: ucm-pv-storage
        securityContext:
          privileged: true

      - image: quay.io/rh-ee-kromashk/uc3-backend:latest
        name: receiver-processor
        workingDir: /processing_data/
        volumeMounts:
        - mountPath: /processing_data/
          name: ucm-pv-storage
        securityContext:
          privileged: true
        command: ["/usr/bin/ucm"]
        args: ["consumer", "processor"]
        ports:
        - containerPort: 5672

      - image: quay.io/rh-ee-kromashk/uc3-backend:latest
        name: watcher-processor
        workingDir: /processing_data/
        command: ["/usr/bin/ucm"]
        args: ["watcher", "processor"]
        volumeMounts:
        - mountPath: /processing_data/
          name: ucm-pv-storage
        securityContext:
          privileged: true
      - image: quay.io/bcapper30/uc3-ppxf:latest
        name: ppxf
        workingDir: /processing_data/
        command: ["/home/ppxf/ppxf_script.sh"]
        volumeMounts:
        - mountPath: /processing_data/
          name: ucm-pv-storage
        securityContext:
          privileged: true
