app_descriptors/deployments/deployment-producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucm-producer-deployment
  namespace: uc3-applications
  labels:
    app: ucm-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ucm-producer
  template:
    metadata:
      labels:
        app: ucm-producer
    spec:
      serviceAccountName: starlight-sa
      volumes:
      - name: ucm-pv-storage
        persistentVolumeClaim:
          claimName: ucm-pv-claim-producer
      containers:

      - image: quay.io/rh-ee-kromashk/uc3-backend:latest
        name: watcher-producer
        workingDir: /processing_data/
        command: ["/uid_entrpoint.sh"]
        args: ["/usr/bin/ucm", "watcher", "producer"]
        ports:
        - containerPort: 5672
        volumeMounts:
        - mountPath: /processing_data/
          name: ucm-pv-storage
        securityContext:
          privileged: true

      - image: quay.io/rh-ee-kromashk/uc3-backend:latest
        name: http-server
        workingDir: /processing_data/
        command: ["/uid_entrpoint.sh"]
        args: ["/usr/bin/ucm", "server"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /processing_data/
          name: ucm-pv-storage
        securityContext:
          privileged: true

      - image: quay.io/rh-ee-kromashk/uc3-backend:latest
        name: receiver-producer
        workingDir: /processing_data/
        volumeMounts:
        - mountPath: /processing_data/
          name: ucm-pv-storage
        securityContext:
          privileged: true
        command: ["/uid_entrpoint.sh"]
        args: ["/usr/bin/ucm", "consumer", "producer"]
      - image: quay.io/rh-ee-kromashk/uc3-backend:latest
        name: aggregator
        workingDir: /processing_data/
        ports:
        - containerPort: 9090
          protocol: TCP
          name: metrics
        volumeMounts:
        - mountPath: /processing_data/
          name: ucm-pv-storage
        securityContext:
          privileged: true
        command: ["/uid_entrpoint.sh"]
        args: ["/usr/bin/ucm", "aggregator"]
---
  
apiVersion: v1
kind: Service
metadata:
  name: uc3-backend-service
  namespace: uc3-applications
  labels:
    app: ucm-producer
    svc: ucm
spec:
  selector:
    app: ucm-producer
  ports:
  - name: api
    port: 8080
    targetPort: 8080
  - name: metrics
    port: 9090
    targetPort: 9090
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: uc3-backend-api
  namespace: uc3-applications
  labels:
    app: ucm-producer
spec:
  to:
    kind: Service
    name: uc3-backend-service
  port:
    targetPort: api
  tls:
    termination: edge
